Added new pages for easily editing HTML in a virtual server's website.
---- Changes since 3.35 ----
PHP and Pear modules needed by script installers are now automatically installed when needed, if supported by the underlying operating system's update service (APT or YUM).
Added support for enabling Ruby scripts in a virtual server. This can be done on the Website Options page, with the modify-web.pl script, on the mass domain update page, and set by default in server templates. Both execution via mod_ruby and CGI scripts are supported, assuming that the required software is installed.
Updated the lookup-domain.pl script (which is called from Procmail) to communicate with a permanent server process, rather than performing all processing on its own. This will reduce the load when email to multiple recipients arrives at once.
Updated the PHProjekt and MediaWiki script installers to setup the database configuration automatically.
Changed pages with tabs and hidden sections to be usable by the mobile device theme.
Improved detection of multiple scripts being accidentally installed into the same path.
Updated DaDaBiK script installer to version 4.2, and MediaWiki to version 1.9.3.
Added a button to the Edit Extra Administrator page for switching to his Webmin login without needing to know the password.
Added the --primary-ip option to create-domain.pl, to create an SSL domain on the primary IP.
Added the Shared IP Addresses page under System Configuration for defining additional shared addresses that can be selected when creating servers without a private IP. Also updated the server creation page to allow selection of one of these shared IPs, and the create-domain.pl program to use one with the --shared-ip parameter.
Added the New Reseller Email page, for setting up a message to be sent to new reseller accounts.
Added the --email parameter to create-reseller.pl and modify-reseller.pl scripts.